[package]
name = "tower-sessions-sled-store"
version = "0.2.0"
edition = "2021"
description = "Sled session store. Not for direct use; see the `tower-sessions` crate for details."
license = "MIT"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
rmp-serde = "1.1.2"
sled = "0.34.7"
tokio = { version = "1.36", features = ["rt"] }
tower-sessions = { version = "0.14", default-features = false }

[dev-dependencies]
axum = "0.8"
tokio = { version = "1.45", features = ["full"] }
tower-sessions = { version = "0.14", features = ["axum-core"] }
serde = { version = "1.0", features = ["derive"] }
time = "0.3"

[[example]]
name = "counter"
required-features = ["tower-sessions/axum-core"]
